--- a/.obsidian/snippets/animations.css
+++ b/.obsidian/snippets/animations.css
@@ -2,12 +2,40 @@
 	@keyframes fadeInUp {
 		from {
 			opacity: 0;
-			transform: translateY(-50%);
+			transform: translateY(50%);
 			scale: 80%;
 		}
+    75% {
+      scale: 110%;
+      transform: translateY(0);
+    }
 		to {
 			opacity: 1;
 			transform: translateY(0);
-			scale: 90%;
+			scale: 100%;
 		}
 	}
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      scale: 0.7;
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+  @keyframes pop {
+    from {
+      opacity: 0;
+      scale: 0.5;
+    }
+    70% {
+      opacity: 1;
+      scale: 1.2
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
