--- a/.obsidian/snippets/formatting.css
+++ b/.obsidian/snippets/formatting.css
@@ -8,19 +8,18 @@
 }
 .subGlowHeading {
   text-align: center;
-  animation: fadeInUP;
+  animation: pop 0.5s ease-in-out;
   text-shadow: 0 0 7px white, 0 0 1px white;
-  font-size: 40;
+  font-size: 30px;
   font-weight: 1000;
   color: white;
 }
 .subGradientHeading {
-  background: linear-gradient(to right, #8e42ff, rgb(100, 180, 255));
+  background: linear-gradient(to right, rgb(164, 84, 255), rgb(100, 180, 255));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 40px;
   font-weight: 1000;
-  padding: 3px;
   padding-right: 10px;
   padding-left: 10px;
   border-radius: 7px;
@@ -33,4 +32,19 @@
   border-left: 5px solid;
   border-radius: 7px;
   margin: 5px;
+}
+.purpleHighlight {
+	background-color: rgba(145, 48, 255, 1);
+	border-radius: 6px;
+  padding-right: 6px;
+  padding-left: 6px;
+  box-shadow: 0 0 15px rgba(164, 84, 255, 0.7);
+  animation: pop 0.5s ease-in-out;
+  width: fit-content;
+  overflow: visible;
+/*  margin-left: 5%;*/ /*add this to make it not cut out in editing mode*/
+}
+.h2 {
+  font-size: 28.836px;
+  font-weight: bold;
 }
